--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -104,6 +104,7 @@ JUISE_LIBS = @JUISE_LIBS@
 JUISE_LIBTOOLLIBS = @JUISE_LIBTOOLLIBS@
 JUISE_SCRIPT_DIR = @JUISE_SCRIPT_DIR@
 JUISE_SRCDIR = @JUISE_SRCDIR@
+JUISE_WEB_DIR = @JUISE_WEB_DIR@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBJUISE_VERSION = @LIBJUISE_VERSION@
