--- a/web/lighttpd.conf.in
+++ b/web/lighttpd.conf.in
@@ -1,4 +1,4 @@
-server.document-root = "@prefix@/share/juise/web"
+server.document-root = "@JUISE_WEB_DIR@"
 server.tag  = "lighttpd/1.4.28 juisebox"
 server.port = 3000
 server.bind = "127.0.0.1"
