--- a/juise-askpass/Makefile.am
+++ b/juise-askpass/Makefile.am
@@ -1,6 +1,12 @@
 #
 # $Id$
 #
+# Copyright 2011, Juniper Networks, Inc.
+# All rights reserved.
+# This SOFTWARE is licensed under the LICENSE provided in the
+# ../Copyright file. By downloading, installing, copying, or otherwise
+# using the SOFTWARE, you agree to be bound by the terms of that
+# LICENSE.
 
 include ${top_srcdir}/warnings.mk
 
@@ -25,6 +31,14 @@ endif
 AM_CFLAGS += -DJUISE_DIR=\"${JUISE_DIR}\"
 
 bin_PROGRAMS = juise-askpass
+
+if HAVE_READLINE
+LIBS += -L/opt/local/lib -lreadline
+endif
+
+if HAVE_LIBEDIT
+LIBS += -ledit
+endif
 
 juise_askpass_SOURCES = juise-askpass.c
 juise_askpass_LDADD = ../libjuise/libjuise.la
