--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -106,6 +106,7 @@ JUISE_CFLAGS = @JUISE_CFLAGS@
 JUISE_DIR = @JUISE_DIR@
 JUISE_INCLUDEDIR = @JUISE_INCLUDEDIR@
 JUISE_LIBDIR = @JUISE_LIBDIR@
+JUISE_LIBEXECDIR = @JUISE_LIBEXECDIR@
 JUISE_LIBS = @JUISE_LIBS@
 JUISE_LIBTOOLLIBS = @JUISE_LIBTOOLLIBS@
 JUISE_SCRIPT_DIR = @JUISE_SCRIPT_DIR@
