--- a/mod_juise/Makefile.in
+++ b/mod_juise/Makefile.in
@@ -153,6 +153,7 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 JUISE_CFLAGS = @JUISE_CFLAGS@
+JUISE_CGI_DIR = @JUISE_CGI_DIR@
 JUISE_DIR = @JUISE_DIR@
 JUISE_INCLUDEDIR = @JUISE_INCLUDEDIR@
 JUISE_LIBDIR = @JUISE_LIBDIR@
