--- a/juise-askpass/Makefile.in
+++ b/juise-askpass/Makefile.in
@@ -595,7 +595,7 @@ uninstall-am: uninstall-pkglibexecPROGRAMS
 	tags uninstall uninstall-am uninstall-pkglibexecPROGRAMS
 
 
-include ${top_srcdir}/warnings.mk
+@JUISE_WARNINGS_TRUE@include ${top_srcdir}/warnings.mk
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
