--- a/juise/Makefile.am
+++ b/juise/Makefile.am
@@ -8,7 +8,9 @@
 # using the SOFTWARE, you agree to be bound by the terms of that
 # LICENSE.
 
+if JUISE_WARNINGS
 include ${top_srcdir}/warnings.mk
+endif
 
 AM_CFLAGS = \
     -DLIBSLAX_XMLSOFT_NEED_PRIVATE \
