recreate cmd.slax in /test/

--- a/web/Makefile.in
+++ b/web/Makefile.in
@@ -234,7 +234,6 @@ top_srcdir = @top_srcdir@
 EXTRA_DIST = Makefile.am Makefile.in lighttpd.conf.in ${WEB_FILES}
 BASE_FILES = \
     favicon.ico \
-    bin/cmd.slax \
     icons/loading.png \
     images/logo.png \
     jquery/jquery-ui.js \
@@ -243,10 +242,10 @@ BASE_FILES = \
     jquery/jquery.js \
     jquery/jquery.min.js \
     jquery/jquery.mruPulldown.js \
-    bin/clira.slax \
     clira/clira.html \
     clira/clira.css \
     clira/clira.js \
+    clira/clira.slax \
     static/drag-test.html
 
 THEME_BLACK_TIE = \
