--- a/mod_juise/Makefile.in
+++ b/mod_juise/Makefile.in
@@ -317,6 +317,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+@JUISE_WARNINGS_HIGH_TRUE@JUISE_WARNINGS = HIGH
 
 #
 # This Makefile tells us how to build our lighttpd module mod_juise,
@@ -696,8 +697,7 @@ uninstall-am: uninstall-libLTLIBRARIES
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am uninstall-libLTLIBRARIES
 
-
-@JUISE_WARNINGS_TRUE@include ${top_srcdir}/warnings.mk
+include ${top_srcdir}/warnings.mk
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
