--- a/mixer/Makefile.in
+++ b/mixer/Makefile.in
@@ -79,10 +79,10 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_mixer_OBJECTS = channel.$(OBJEXT) console.$(OBJEXT) debug.$(OBJEXT) \
-	forwarder.$(OBJEXT) listener.$(OBJEXT) mixer.$(OBJEXT) \
-	mtypes.$(OBJEXT) request.$(OBJEXT) session.$(OBJEXT) \
-	websocket.$(OBJEXT)
+am_mixer_OBJECTS = buffer.$(OBJEXT) channel.$(OBJEXT) \
+	console.$(OBJEXT) debug.$(OBJEXT) forwarder.$(OBJEXT) \
+	listener.$(OBJEXT) mixer.$(OBJEXT) mtypes.$(OBJEXT) \
+	request.$(OBJEXT) session.$(OBJEXT) websocket.$(OBJEXT)
 mixer_OBJECTS = $(am_mixer_OBJECTS)
 mixer_DEPENDENCIES = ../libjuise/libjuise.la
 AM_V_lt = $(am__v_lt_@AM_V@)
@@ -308,14 +308,27 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+@JUISE_WARNINGS_HIGH_TRUE@JUISE_WARNINGS = HIGH
 AM_CFLAGS = -DLIBSLAX_XMLSOFT_NEED_PRIVATE -I${top_srcdir} \
 	-I${top_srcdir}/libjuise -Ilibssh2 ${LIBSLAX_CFLAGS} \
 	${LIBXSLT_CFLAGS} ${LIBXML_CFLAGS} ${LIBSSH2_CFLAGS} \
 	${WARNINGS} $(am__append_1)
 noinst_HEADERS = \
-    local.h
+    buffer.h \
+    channel.h \
+    console.h \
+    debug.h \
+    forwarder.h \
+    listener.h \
+    local.h \
+    mtypes.h \
+    netconf.h \
+    request.h \
+    session.h \
+    websocket.h
 
 mixer_SOURCES = \
+    buffer.c \
     channel.c \
     console.c \
     debug.c \
@@ -419,6 +432,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/buffer.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/channel.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/console.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/debug.Po@am__quote@
@@ -676,8 +690,7 @@ uninstall-am: uninstall-binPROGRAMS
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am uninstall-binPROGRAMS
 
-
-@JUISE_WARNINGS_TRUE@include ${top_srcdir}/warnings.mk
+include ${top_srcdir}/warnings.mk
 
 #man_MANS = mixer.1x
 #EXTRA_DIST = mixer.1x
