checkpoint mixer code

--- a/libjuise/Makefile.am
+++ b/libjuise/Makefile.am
@@ -65,6 +65,7 @@ JUISEHEADERS = ${noinst_HEADERS}
 libjuise_la_SOURCES = \
     data/patricia.c \
     data/parse_ipaddr.c \
+    string/snprintf_safe.c \
     string/strndup.c \
     string/strdupf.c \
     time/timestr.c \
