--- a/libjuise/Makefile.am
+++ b/libjuise/Makefile.am
@@ -19,6 +19,7 @@ AM_CFLAGS = \
     -DLIBSLAX_XMLSOFT_NEED_PRIVATE \
     -DJUISE_LIBEXECDIR=\"${JUISE_LIBEXECDIR}\" \
     -I${top_srcdir} \
+    -I${top_objdir} \
     ${LIBSLAX_CFLAGS} \
     ${LIBXSLT_CFLAGS} \
     ${LIBXML_CFLAGS} \
